--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
   "version": "1.0.0",
   "description": "This is my express project fory my librarySystem",
   "main": "server.js",
+
+  "type":"module",
+
   "scripts": {
+
+  
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  
+
+
   "author": "kanishkaj",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
