--- a/package.json
+++ b/package.json
@@ -2,21 +2,13 @@
   "name": "librarysystem-backend-api",
   "version": "1.0.0",
   "description": "This is my express project fory my librarySystem",
-  "main": "server.js",
-
-  
-  
-    "type": "module",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js",
-      "dev": "nodemon server.js"
-    },
-    
-  
-  
-
-
+  "main": "server.mjs",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.mjs",
+    "dev": "nodemon server.mjs"
+  },
   "author": "kanishkaj",
   "license": "MIT",
   "dependencies": {
