--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
+    "dec": "^0.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "run": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
